# ChangeLog for dev-perl/Test-Simple
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Simple/Attic/ChangeLog,v 1.13 2003/08/04 01:15:01 gmsoft Exp $

  25 Jul 2003; <rac@gentoo.org> Test-Simple-0.47-r1.ebuild:
  Remove ~arch protection on all but hppa and arm

*Test-Simple-0.47-r1 (19 Jul 2003)

  04 Aug 2003; Guy Martin <gmsoft@gentoo.org> Test-Simple-0.47-r1.ebuild :
  Marked stable on hppa.

  19 Jul 2003; <rac@gentoo.org> Test-Simple-0.47-r1.ebuild:
  Vendordir version

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*Test-Simple-0.47 (16 Nov 2002)

  05 Apr 2003; Zach Welch <zwelch@gentoo.org> Test-Simple-0.47.ebuild:
  add arm keyword

  20 Mar 2003; Guy Martin <gmsoft@gentoo.org> Test-Simple-0.47.ebuild :
  Added hppa to KEYWORDS.

  16 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  Test-Simple-0.47.ebuild, files/digest-Test-Simple-0.47 :

  New version (required by update to latest HTML-Mason). Tidied up
  ChangeLog.

*Test-Simple-0.42-r1 (14 Jun 2002)

  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*Test-Simple-0.42 (14 Jun 2002)

  1 Aug 2002; Calum Selkirk <cselkirk@gentoo.org> Test-Simple-0.42.ebuild :

  Added ppc to KEYWORDS.

  14 Jun 2002; Seemant Kulleen <seemant@gentoo.org> Test-Simple-0.42.ebuild
  files/digest-Test-Simple-0.42 :

  New package, submitted by: arutha@gmx.de (Alexander Gretencord) in bug
  #3513