@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Simple/Attic/Test-Simple-0.47-r1.ebuild,v 1.3 2003/08/04 01:15:01 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Simple/Attic/Test-Simple-0.47-r1.ebuild,v 1.4 2004/02/16 15:14:44 mcummings Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://search.cpan.org/search?dist=Test-Harness"
 IUSE=""
 SLOT="0"
 LICENSE="Artistic"
-KEYWORDS="x86 amd64 ppc sparc alpha hppa ~arm"
+KEYWORDS="x86 amd64 ppc sparc alpha hppa"
 
 mydoc="rfc*.txt"
 myconf="INSTALLDIRS=vendor"
