@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Simple/Attic/Test-Simple-0.47.ebuild,v 1.7 2003/06/21 21:36:37 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Simple/Attic/Test-Simple-0.47.ebuild,v 1.8 2004/02/16 15:14:44 mcummings Exp $
 
 inherit perl-module
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://search.cpan.org/search?dist=Test-Harness"
 
 SLOT="0"
 LICENSE="Artistic"
-KEYWORDS="x86 amd64 ppc sparc alpha hppa arm"
+KEYWORDS="x86 amd64 ppc sparc alpha hppa"
 
 mydoc="rfc*.txt"
 
